--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,10 @@
     <body>
         <header>
             <nav>
-                <buttons>Home</buttons>
-                <buttons>Menu</buttons>
-                <buttons>About</buttons>
+                <button>HOME</button>
+                <button>MENU</button>
+                <button>ABOUT</button>
+                <button>CONTACT</button>
             </nav>
         </header>
         <div id="content"></div>
