--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-    <script defer src="main.js"></script></head>
-    <body>
-        <header>
-            <nav>
-                <button>HOME</button>
-                <button>MENU</button>
-                <button>CONTACT</button>
-            </nav>
-        </header>
-        <div id="content"></div>
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Document</title><script defer="defer" src="main.js"></script></head><body><header><nav><button>HOME</button> <button>MENU</button> <button>CONTACT</button></nav></header><div id="content"></div></body></html>
